@@ -1,3 +1,7 @@
+= master
+
+* Add Vary response header when using type_routing plugin with Accept request header to prevent caching issues (jeremyevans)
+
 = 3.35.0 (2020-08-14)
 
 * Add r plugin for r method for accessing request, useful when r local variable is not in scope (jeremyevans)
